force-app/main/default/objects/Claim_Document_Relationship__c/Claim_Document_Relationship__c.object-meta.xml
<CustomObject>
    <label>Claim Documents</label>
    <nameField>
        <displayFormat>CD-2022-{000000}</displayFormat>
        <label>Claim Document Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>