force-app/main/default/objects/Claim_Document_Relationship__c/fields/Benefit_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipLabel>Claim Documents</relationshipLabel>
    <relationshipName>Claim_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>