force-app/main/default/objects/Claim_Document_Relationship__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Number</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Claim Documents</relationshipLabel>
    <relationshipName>Claim_Documents1</relationshipName>
    <type>Lookup</type>
</CustomField>