force-app/main/default/objects/Claim_Document_Relationship__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <referenceTo>Sanlam_Claim_Document__c</referenceTo>
    <relationshipLabel>Claim Documents</relationshipLabel>
    <relationshipName>Claim_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>