force-app/main/default/objects/Claim_Document_Relationship__c/fields/Sanlam_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Sanlam_Member_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Documents</relationshipLabel>
    <relationshipName>Claim_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>